Fixed text align of buttons (#33217)

--- a/extensions/amp-story-interactive/0.1/amp-story-interactive-poll.css
+++ b/extensions/amp-story-interactive/0.1/amp-story-interactive-poll.css
@@ -41,6 +41,7 @@
   color: inherit !important;
   width: 100% !important;
   outline: none !important;
+  text-align: start !important;
 }
 
 .i-amphtml-story-interactive-option:not(:first-child) {
